# zed

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
assets/keymaps/: default-linux.json  default-macos.json  vim.json
assets/settings/: default.json
crates/activity_indicator/: Cargo.toml
crates/activity_indicator/src/: activity_indicator.rs
crates/assets/src/: lib.rs
crates/assistant/: Cargo.toml
crates/assistant/src/: assistant_panel.rs  completion_provider.rs
crates/call/src/: call.rs
crates/channel/src/: channel_store_tests.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  telemetry.rs  test.rs  user.rs
crates/collab/: Cargo.toml
crates/collab/src/: api.rs  main.rs
crates/collab_ui/: Cargo.toml
crates/collab_ui/src/: channel_view.rs  collab_titlebar_item.rs  collab_ui.rs
crates/command_palette/: Cargo.toml
crates/command_palette/src/: command_palette.rs
crates/copilot_ui/src/: copilot_completion_provider.rs
crates/db/: Cargo.toml
crates/db/src/: db.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: diagnostics.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  editor.rs  editor_tests.rs  element.rs  inlay_hint_cache.rs  items.rs  scroll.rs
crates/extension/src/: extension_store.rs
crates/extensions_ui/src/: extensions_ui.rs
crates/feedback/src/: feedback_modal.rs
crates/gpui/src/: app.rs  image_cache.rs
crates/language/: Cargo.toml
crates/language/src/: buffer.rs  buffer_tests.rs  language.rs  language_registry.rs  language_settings.rs
crates/language_tools/: Cargo.toml
crates/languages/: Cargo.toml
crates/lsp/: Cargo.toml
crates/notifications/: Cargo.toml
crates/project/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/project_symbols/: Cargo.toml
crates/quick_action_bar/: Cargo.toml
crates/search/: Cargo.toml
crates/settings/: Cargo.toml
crates/storybook/: Cargo.toml
crates/terminal_view/: Cargo.toml
crates/theme_selector/: Cargo.toml
crates/util/: Cargo.toml
crates/vim/: Cargo.toml
crates/welcome/: Cargo.toml
crates/workspace/: Cargo.toml
crates/worktree/: Cargo.toml
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  only_instance.rs  open_listener.rs
docs/src/: SUMMARY.md  configuring_zed.md  configuring_zed__configuring_vim.md  configuring_zed__key_bindings.md  developing_zed__building_zed_macos.md  developing_zed__building_zed_windows.md  telemetry.md
script/: linux
script/licenses/: zed-licenses.toml
(+73 files in other folders)
