[package]
description = "The fast code editor."
edition = "2021"
name = "zed"
version = "0.129.2"
publish = false
license = "GPL-3.0-or-later"
authors = ["Zed Team <hi@zed.dev>"]

[lints]
workspace = true

[[bin]]
name = "zed"
path = "src/main.rs"

[dependencies]
activity_indicator.workspace = true
anyhow.workspace = true
assets.workspace = true
backtrace = "0.3"
breadcrumbs.workspace = true
chrono.workspace = true
clap.workspace = true
clock.workspace = true
collections.workspace = true
command_palette.workspace = true
db.workspace = true
diagnostics.workspace = true
editor.workspace = true
env_logger.workspace = true
file_finder.workspace = true
fs.workspace = true
futures.workspace = true
go_to_line.workspace = true
gpui.workspace = true
image_viewer.workspace = true
language.workspace = true
language_selector.workspace = true
language_tools.workspace = true
languages.workspace = true
log.workspace = true
markdown_preview.workspace = true
menu.workspace = true
mimalloc = "0.1"
outline.workspace = true
parking_lot.workspace = true
profiling.workspace = true
project.workspace = true
project_panel.workspace = true
project_symbols.workspace = true
quick_action_bar.workspace = true
recent_projects.workspace = true
rope.workspace = true
search.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
simplelog = "0.9"
smol.workspace = true
task.workspace = true
tasks_ui.workspace = true
theme.workspace = true
theme_selector.workspace = true
urlencoding = "2.1.2"
util.workspace = true
uuid.workspace = true
vim.workspace = true
welcome.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-manifest = "1.4.0"
winresource = "0.1"

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
language = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
tree-sitter-rust.workspace = true
workspace = { workspace = true, features = ["test-support"] }

[package.metadata.bundle-dev]
icon = ["resources/app-icon-preview@2x.png", "resources/app-icon-preview.png"]
identifier = "dev.zed.Zed"
name = "Zed"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["zed"]

[package.metadata.cargo-machete]
ignored = ["profiling"]
